--- a/assignment4.html
+++ b/assignment4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Predictive Search</title>
-    <link rel="stylesheet" href="assignment4.css">
+    <link rel="stylesheet" href="./CSS/assignment4.css">
   </head>
   <body>
     <h1 class="h1">Predictive Search</h1>
@@ -20,8 +20,9 @@
       </div>
     </div>
 
+    <div id="dropdown"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="assignment4.js"></script>
+    <script src="./JS/assignment4.js"></script>
   </body>
 </html>
